--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "cross-env NODE_ENV=production node -r dotenv/config ./server.js",
-    "start:dev": "cross-env NODE_ENV=development nodemon -r dotenv/config ./server.js"
+    "start:dev": "cross-env NODE_ENV=development nodemon -r dotenv/config --experimental-json-modules ./server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -13,7 +13,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
     "jest": "^28.1.0",
