--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "joi": "^17.6.0",
     "mongoose": "^6.3.3",
     "morgan": "^1.10.0",
     "swagger-ui-express": "^4.3.0"
