--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "start:dev": "cross-env NODE_ENV=development nodemon -r dotenv/config --experimental-json-modules ./server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "http-errors": "^2.0.0",
     "joi": "^17.6.0",
+    "joi-objectid": "^4.0.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "morgan": "^1.10.0",
+    "nanoid": "^3.3.4",
     "swagger-ui-express": "^4.3.0"
   },
   "devDependencies": {
