--- a/package.json
+++ b/package.json
@@ -7,20 +7,25 @@
     "start:dev": "cross-env NODE_ENV=development nodemon -r dotenv/config --experimental-json-modules ./server.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.2",
     "assert": "^2.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "http-errors": "^2.0.0",
     "joi": "^17.6.0",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
+    "mailgen": "^2.0.25",
     "mongoose": "^6.3.3",
     "morgan": "^1.10.0",
     "nanoid": "^3.3.4",
-    "swagger-ui-express": "^4.3.0"
+    "sendgrid": "^5.2.3",
+    "swagger-ui-express": "^4.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "jest": "^28.1.0",
